@@ -1,0 +1,246 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u6771\u4eac\u842c\u8056\u7bc0\u65b0\u898f\u51fa\u7210\uff01\u6f80\u8c37\u3001\u65b0\u5bbf\u56b4\u7981\u8857\u982d\u98f2\u9152\uff0c185\u540d\u4fdd\u5b89\u4eba\u54e1\u5c07\u5de1\u908f\u7dad\u6301\u79e9\u5e8f", "description": "\u6771\u4eac\u842c\u8056\u7bc0\u65b0\u898f\u51fa\u7210\uff01\u6f80\u8c37\u3001\u65b0\u5bbf\u56b4\u7981\u8857\u982d\u98f2\u9152\uff0c185\u540d\u4fdd\u5b89\u4eba\u54e1\u5c07\u5de1\u908f\u7dad\u6301\u79e9\u5e8f", "url": "https://www.famechos.me/news/\u6771\u4eac\u842c\u8056\u7bc0\u65b0\u898f\u51fa\u7210\uff01\u6f80\u8c37\u3001\u65b0\u5bbf\u56b4\u7981\u8857\u982d\u98f2\u9152\uff0c185\u540d\u4fdd\u5b89\u4eba\u54e1\u5c07\u5de1\u908f\u7dad\u6301\u79e9\u5e8f/", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-08T12:19:17.418311+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/東京萬聖節新規出爐！澀谷、新宿嚴禁街頭飲酒，185名保安人員將巡邏維持秩序/"/>
+<meta name="description" content="東京萬聖節新規出爐！澀谷、新宿嚴禁街頭飲酒，185名保安人員將巡邏維持秩序。萬聖節前夕，東京政府宣布新規，嚴禁在澀谷、新宿等區域內的街頭飲酒，同時派遣185名保安人員進行巡邏，維護秩序。">
+
+<meta name="keywords" content="東京萬聖節、新規、澀谷、新宿、街頭飲酒、保安人員、巡邏、秩序">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/東京萬聖節新規出爐！澀谷、新宿嚴禁街頭飲酒，185名保安人員將巡邏維持秩序/" />
+        <meta property="og:title" content="東京萬聖節新規出爐！澀谷、新宿嚴禁街頭飲酒，185名保安人員將巡邏維持秩序" />
+        <meta property="og:description" content="東京萬聖節新規出爐！澀谷、新宿嚴禁街頭飲酒，185名保安人員將巡邏維持秩序" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="東京萬聖節新規出爐！澀谷、新宿嚴禁街頭飲酒，185名保安人員將巡邏維持秩序" />
+        <meta property="twitter:description" content="東京萬聖節新規出爐！澀谷、新宿嚴禁街頭飲酒，185名保安人員將巡邏維持秩序" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2>K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2>J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2>影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2>其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <i class="bi bi-headset"></i>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <i class="bi bi-gear"></i>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+        </button>
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>東京萬聖節新規出爐！澀谷、新宿嚴禁街頭飲酒，185名保安人員將巡邏維持秩序</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-POP</p>
+          <p class="news-date">25/9/2099</p>
+        </div>
+	<p>東京的澀谷和新宿地區再次呼籲民眾在萬聖節期間避免前往。這兩個地區在過去的萬聖節期間都經歷了人潮洶湧和垃圾遍地的問題，今年決定採取更嚴格的措施。</p>
+<h2>萬聖節新宿活動規則須知</h2>
+<p>新宿的歌舞伎町地區在2023年的萬聖節期間出現了大量聚集的人群和相關問題。因此，今年新宿也將實施自己的措施，禁止萬聖節期間的街頭飲酒。這項法令將適用於歌舞伎町1丁目和新宿3丁目的部分地區，時間從10月31日下午5點到11月1日凌晨5點。大約100名保安人員將在該地區巡邏，以執行這些規則。</p>
+<h2>萬聖節在澀谷：你需要知道的規則</h2>
+<p>澀谷在今年10月1日通過了一項法令，禁止在夜間公共場所飲酒。除了這項禁令外，今年萬聖節期間還將實施特別的安全措施，大約185名保安人員將在車站周圍巡邏。</p>
+<p>以下是今年東京萬聖節的相關規則：</p>
+<ul>
+<li>新宿：禁止萬聖節期間的街頭飲酒（歌舞伎町1丁目和新宿3丁目的部分地區）</li>
+<li>澀谷：禁止在夜間公共場所飲酒</li>
+<li>保安人員將在新宿和澀谷地區巡邏，以執行這些規則</li>
+</ul><h2>萬聖節安全措施</h2>
+<p>為了確保萬聖節期間的安全，澀谷和新宿實施了多項措施。</p>
+<ul>
+<li>10月25-26日和10月30-31日的安全巡邏</li>
+<li>反垃圾措施</li>
+<li>關閉澀谷站的十字路口和宮益坂下公共吸煙區</li>
+<li>官員要求酒類商店在10月26-31日下午6點至凌晨5點期間停止銷售酒精飲料</li>
+</ul>
+<p>此外，澀谷還將在10月30-31日封閉車站外的忠犬八公像。</p>
+<p>在澀谷和新宿，違反這些法令不會受到法律制裁，但是酒精飲料可能會被沒收。聚集的人群可能會被驅散。如果您想享受一杯飲料，只需在室內的酒吧或餐廳享用即可。</p>
+<h2>長期之計：如何應對過度旅遊的挑戰</h2>
+<p>根據澀谷市長長谷部健和新宿市長吉住健一的表示，對於日益增加的“過度旅遊”問題是制定新萬聖節規則的主要原因。</p>
+<h2>新措施在澀谷出台</h2>
+<p>為了應對全年「過度旅遊」和節日人潮，澀谷區將實施以下措施：</p>
+<ul>
+<li>在澀谷十字路口播放公共服務廣告，提醒人們不要在街上飲酒和吸煙</li>
+<li>張貼海報和播放視頻</li>
+<li>在購物街安裝安全攝像頭</li>
+</ul>
+<p>長谷部健表示，如果不採取進一步的中長期對策，「過度旅遊」和節日人潮的問題不會輕易解決。他表示，澀谷正在研究如何減少熱門旅遊景點的人潮，鼓勵人們訪問其他較少人知的地區，而不是集中在澀谷十字路口等地。</p>
+<p>請注意，資訊可能會有變動，我們盡力確保其正確性。</p>
+
+<div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/IJdNFDUbq7g" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p class="related-vid-text">相關影片：</p>
+</div>
+
+<p class="news-text-inner">資料來源： Tokyo Cheapo</p>
+</div>
+</div>
+</main>
+
+
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
