@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Tue, 08 Oct 2024 12:17:28 +0800</lastBuildDate>
+  <lastBuildDate>Tue, 08 Oct 2024 12:19:31 +0800</lastBuildDate>
 
   <item>
   <title>G-Dragon終於打破沉默！將在《劉QUIZ ON THE BLOCK》首次亮相，分享BIGBANG歲月、毒品風波和音樂復出計劃</title>
@@ -72,5 +72,10 @@
   <link>https://www.famechos.me/news/BLACKPINK成員Jennie新單曲《Mantra》能否扭轉韓國女歌手低迷狀態？/</link>
   <description>BLACKPINK成員Jennie新單曲《Mantra》能否扭轉韓國女歌手低迷狀態？</description>
   <pubDate>Tue, 08 Oct 2024 12:17:28 +0800</pubDate>
+</item><item>
+  <title>東京萬聖節新規出爐！澀谷、新宿嚴禁街頭飲酒，185名保安人員將巡邏維持秩序</title>
+  <link>https://www.famechos.me/news/東京萬聖節新規出爐！澀谷、新宿嚴禁街頭飲酒，185名保安人員將巡邏維持秩序/</link>
+  <description>東京萬聖節新規出爐！澀谷、新宿嚴禁街頭飲酒，185名保安人員將巡邏維持秩序</description>
+  <pubDate>Tue, 08 Oct 2024 12:19:31 +0800</pubDate>
 </item></channel>
 </rss>
