@@ -44,3 +44,4 @@ https://www.koreaherald.com/view.php?ud=20241004050493
 https://www.koreaherald.com/view.php?ud=20241007050694
 https://www.koreaherald.com/view.php?ud=20241007050635
 https://www.koreaherald.com/view.php?ud=20241007050599
+https://www.koreaherald.com/view.php?ud=20241006050139
